--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "gatsby-starter-hello-world",
+  "name": "gatsby-blog",
   "private": true,
-  "description": "A simplified bare-bones starter for Gatsby",
+  "description": "blog",
   "version": "0.1.0",
-  "license": "MIT",
+  "license": "ISC",
   "scripts": {
     "build": "gatsby build",
     "dev": "gatsby develop",
@@ -17,9 +17,23 @@
     "@commitlint/cli": "^8.3.4",
     "@commitlint/config-conventional": "^8.3.4",
     "@emotion/core": "^10.0.27",
+    "@types/react": "^16.9.17",
+    "@types/styled-components": "^4.4.2",
+    "@types/typography": "^0.16.3",
+    "babel-eslint": "^10.0.3",
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb": "^18.0.1",
+    "eslint-config-prettier": "^6.9.0",
+    "eslint-loader": "^3.0.3",
+    "eslint-plugin-import": "^2.20.0",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-react": "^7.17.0",
     "gatsby": "^2.18.12",
     "gatsby-cli": "^2.8.26",
     "gatsby-plugin-emotion": "^4.1.21",
+    "gatsby-plugin-eslint": "^2.0.8",
+    "gatsby-plugin-tslint": "^0.0.2",
+    "gatsby-plugin-typescript": "^2.1.26",
     "gatsby-plugin-typography": "^2.3.21",
     "gatsby-source-filesystem": "^2.1.46",
     "gatsby-transformer-remark": "^2.6.48",
@@ -28,6 +42,9 @@
     "react-dom": "^16.12.0",
     "react-typography": "^0.16.19",
     "styled-components": "^4.4.1",
+    "tslint": "^5.20.1",
+    "tslint-loader": "^3.5.4",
+    "typescript": "^3.7.4",
     "typography": "^0.16.19",
     "typography-theme-kirkham": "^0.16.19"
   },
@@ -36,10 +53,11 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/gatsbyjs/gatsby-starter-hello-world"
+    "url": "https://github.com/katebeavis/gatsby-blog"
   },
+  "author": "Kate Beavis",
   "bugs": {
-    "url": "https://github.com/gatsbyjs/gatsby/issues"
+    "url": "https://github.com/katebeavis/gatsby-blog/issues"
   },
   "husky": {
     "hooks": {
