--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@commitlint/config-conventional": "^8.3.4",
     "@emotion/core": "^10.0.27",
     "@types/react": "^16.9.17",
+    "@types/react-helmet": "^5.0.15",
     "@types/styled-components": "^4.4.2",
     "@types/typography": "^0.16.3",
     "babel-eslint": "^10.0.3",
@@ -30,8 +31,11 @@
     "eslint-plugin-react": "^7.17.0",
     "gatsby": "^2.18.12",
     "gatsby-cli": "^2.8.26",
+    "gatsby-plugin-emoji-favicon": "^1.4.1",
     "gatsby-plugin-emotion": "^4.1.21",
     "gatsby-plugin-eslint": "^2.0.8",
+    "gatsby-plugin-react-helmet": "^3.1.21",
+    "gatsby-plugin-styled-components": "^3.1.17",
     "gatsby-plugin-tslint": "^0.0.2",
     "gatsby-plugin-typescript": "^2.1.26",
     "gatsby-plugin-typography": "^2.3.21",
@@ -40,6 +44,7 @@
     "husky": "^4.0.7",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-helmet": "^5.2.1",
     "react-typography": "^0.16.19",
     "styled-components": "^4.4.1",
     "tslint": "^5.20.1",
