--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
     "@types/react-helmet": "^5.0.15",
     "@types/styled-components": "^4.4.2",
     "@types/typography": "^0.16.3",
-    "babel-eslint": "^10.0.3",
-    "eslint": "^6.8.0",
+    "babel-eslint": "^10.1.0",
+    "eslint": "^7.13.0",
     "eslint-config-airbnb": "^18.0.1",
     "eslint-config-prettier": "^6.9.0",
     "eslint-loader": "^3.0.3",
@@ -29,28 +29,25 @@
     "eslint-plugin-react": "^7.17.0",
     "gatsby": "^2.25.3",
     "gatsby-cli": "^2.12.117",
-    "gatsby-plugin-emoji-favicon": "^1.4.1",
+    "gatsby-plugin-emoji-favicon": "^1.5.0",
     "gatsby-plugin-emotion": "^4.3.15",
     "gatsby-plugin-eslint": "^2.0.8",
     "gatsby-plugin-postcss": "^3.0.4",
     "gatsby-plugin-react-helmet": "^3.1.21",
     "gatsby-plugin-styled-components": "^3.1.17",
     "gatsby-plugin-tslint": "^0.0.2",
-    "gatsby-plugin-typescript": "^2.1.26",
+    "gatsby-plugin-typescript": "^2.5.0",
     "gatsby-plugin-typography": "^2.3.21",
     "gatsby-source-filesystem": "^2.1.46",
     "gatsby-transformer-remark": "^2.6.48",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
-    "react-typography": "^0.16.19",
-    "styled-components": "^4.4.1",
+    "styled-components": "^5.2.1",
     "tailwindcss": "^1.9.6",
     "tslint": "^5.20.1",
     "tslint-loader": "^3.5.4",
-    "typescript": "^4.0.5",
-    "typography": "^0.16.19",
-    "typography-theme-kirkham": "^0.16.19"
+    "typescript": "^4.0.5"
   },
   "devDependencies": {
     "prettier": "^1.19.1"
