--- a/package.json
+++ b/package.json
@@ -43,11 +43,13 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
+    "react-typography": "^0.16.19",
     "styled-components": "^5.2.1",
     "tailwindcss": "^1.9.6",
     "tslint": "^5.20.1",
     "tslint-loader": "^3.5.4",
-    "typescript": "^4.0.5"
+    "typescript": "^4.0.5",
+    "typography": "^0.16.19"
   },
   "devDependencies": {
     "prettier": "^1.19.1"
