--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   },
   "dependencies": {
     "@emotion/core": "^10.1.1",
+    "@mdx-js/mdx": "^1.6.21",
+    "@mdx-js/react": "^1.6.21",
     "@types/react": "^16.9.17",
     "@types/react-helmet": "^5.0.15",
     "@types/styled-components": "^4.4.2",
@@ -32,6 +34,8 @@
     "gatsby-plugin-emoji-favicon": "^1.5.0",
     "gatsby-plugin-emotion": "^4.3.15",
     "gatsby-plugin-eslint": "^2.0.8",
+    "gatsby-plugin-feed-mdx": "^1.0.1",
+    "gatsby-plugin-mdx": "^1.5.0",
     "gatsby-plugin-postcss": "^3.0.4",
     "gatsby-plugin-react-helmet": "^3.1.21",
     "gatsby-plugin-styled-components": "^3.1.17",
