--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@emotion/core": "^10.1.1",
     "@mdx-js/mdx": "^1.6.21",
     "@mdx-js/react": "^1.6.21",
+    "@types/mdx-js__react": "^1.5.3",
     "@types/react": "^16.9.17",
     "@types/react-helmet": "^5.0.15",
     "@types/styled-components": "^4.4.2",
